--- a/aboutMe.html
+++ b/aboutMe.html
@@ -27,7 +27,8 @@
 <center>
 <div> <p2> Heyo! I'm Gabriela Jimenez, I'm sixteen years old and I like helping others.
 You can find my twitter <a href = "https://twitter.com/gabydaisies"> <strong> here! </strong> </a> </div> </p2>
-<br></br> I am in my school's speech and debate team and I will be a team captain next year! I am a rising senior and I'm ready to start senior year!
+<br> </br> 
+<p> I am in my school's speech and debate team and I will be a team captain next year! I am a rising senior and I'm ready to start senior year! </p>
 
 <br>
 
